Changed bg + changed to TS + CSS fixes - Changed the website background as per the client's request. - Switched to typescript for better handling of data type errors and prevent unforseen errors. - Fixed issue where introduction content was clipping over the navbar. - Currently writing function to load opening/closing hours on the table in the footer section from the hours.json.

--- a/Styles/recycled_components.css
+++ b/Styles/recycled_components.css
@@ -30,10 +30,10 @@ span {
 .section{
     padding: 20px;
     margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 5px; 
-    background-color: rgb(240, 240, 67);
+    background-color: white;
+}
+.section-description{
+       
 }
 .nav-buttons:hover {
     background-color: transparent;
